Off-centered "No users found" text fixed

--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -56,3 +56,8 @@ button {
         }
     }
 }
+
+.no-info {
+    grid-row: 1 / -1;
+    text-align: center;
+}
